@@ -120,13 +120,10 @@ interpolate(struct pam * const pamP,
 
 
 static int
-isgray(struct pam * const pamP,
-       tuple        const color) {
+isgray(tuple const color) {
 
-    return (pamP->depth == 1)
-        || ((pamP->depth == 3)
-        && (color[PAM_RED_PLANE] == color[PAM_GRN_PLANE])
-        && (color[PAM_RED_PLANE] == color[PAM_BLU_PLANE])); 
+    return (color[PAM_RED_PLANE] == color[PAM_GRN_PLANE])
+            && (color[PAM_RED_PLANE] == color[PAM_BLU_PLANE]);
 }
 
 
@@ -177,10 +174,10 @@ main(int argc, char *argv[]) {
     pam.maxval           = cmdline.maxval;
     pam.bytes_per_sample = pnm_bytespersample(pam.maxval);
     pam.format           = PAM_FORMAT;
-    if (isgray(&pam, cmdline.colorTopLeft)
-            && isgray(&pam, cmdline.colorTopRight)
-            && isgray(&pam, cmdline.colorBottomLeft)
-            && isgray(&pam, cmdline.colorBottomRight)) {
+    if (isgray(cmdline.colorTopLeft)
+            && isgray(cmdline.colorTopRight)
+            && isgray(cmdline.colorBottomLeft)
+            && isgray(cmdline.colorBottomRight)) {
         pam.depth = 1;
         strcpy(pam.tuple_type, PAM_PGM_TUPLETYPE);
     } else {
